Fix issue with retrieving data.\n Fix Database ConnectionStrings to connect correctly.\n Add [HttpPost], [HttpPut], and [HttpDelete]

--- a/Task1.csproj
+++ b/Task1.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	  <InvariantGlobalization>false</InvariantGlobalization>
     <UserSecretsId>ea0d4695-94c2-4b6f-8e9b-8b252e89247a</UserSecretsId>
   </PropertyGroup>
 
