Authorization using Swagger Button, Authentication and login credentials has been added to the app.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "The Top Secret Key for Hashing The Credentials In The App"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=BlackStone;Trusted_Connection=True;TrustServerCertificate=True;"
   },
